--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="css/styles.css">
   <title>My Portfolio</title>
   <!-- Add any necessary CSS or external stylesheets here -->
 </head>
@@ -13,4 +14,5 @@
   <!-- Add any additional information or links as needed -->
 </div>
 </body>
+  <script src="js/script.js"></script>
 </html>
