--- a/index.html
+++ b/index.html
@@ -5,6 +5,26 @@
   <title>My Portfolio</title>
   <!-- Add any necessary CSS or external stylesheets here -->
 </head>
+<nav class="navbar">
+  <div class="navbar-container">
+    <div class="brand">
+      <a href="#">Logo</a>
+    </div>
+    <ul class="menu">
+      <li><a href="#home">Home</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+    <div class="toggle-button">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </div>
+  </div>
+</nav>
+  
+
 <body>
   <h1>Welcome to My Portfolio</h1>
   <div class="project-card">
