--- a/index.html
+++ b/index.html
@@ -1,38 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+  <title>Joshua Nick Tan</title>
   <link rel="stylesheet" href="css/styles.css">
-  <title>My Portfolio</title>
-  <!-- Add any necessary CSS or external stylesheets here -->
 </head>
-<nav class="navbar">
-  <div class="navbar-container">
-    <div class="brand">
-      <a href="#">Logo</a>
-    </div>
-    <ul class="menu">
-      <li><a href="#home">Home</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-    <div class="toggle-button">
-      <span class="bar"></span>
-      <span class="bar"></span>
-      <span class="bar"></span>
-    </div>
-  </div>
-</nav>
-  
-
 <body>
-  <h1>Welcome to My Portfolio</h1>
-  <div class="project-card">
-  <h2>Project Name</h2>
-  <p>Project Description</p>
-  <img src="project-image.jpg" alt="Project Image">
-  <!-- Add any additional information or links as needed -->
-</div>
+  <nav class="navbar">
+    <div class="navbar-container">
+      <div class="brand">
+        <a href="#">Logo</a>
+      </div>
+      <ul class="menu">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <section id="home">
+    <h1>Welcome to My Website</h1>
+    <!-- Add content for the home section -->
+  </section>
+
+  <section id="ABOUT ME">
+    <h2>ABOUT ME</h2>
+    <!-- Add content for the about section -->
+  </section>
+
+  <section id="PROJECTS">
+    <h2>PROJECTS</h2>
+    <!-- Add content for the services section -->
+  </section>
+
+  <section id="contact">
+    <h2>Contact Me</h2>
+    <!-- Add content for the contact section -->
+  </section>
+
+  <script src="script.js"></script>
 </body>
-  <script src="js/script.js"></script>
 </html>
