--- a/index.html
+++ b/index.html
@@ -1,46 +1,43 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Joshua Nick Tan</title>
-  <link rel="stylesheet" href="css/styles.css">
-    <script src="js/script.js"></script>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Joshua Nick Tan's Portfolio</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="mediaqueries.css">
 </head>
 <body>
-  <nav class="navbar">
-    <div class="navbar-container">
-      <div class="brand">
-        <a href="#">Logo</a>
-      </div>
-      <ul class="menu">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#contact">Contact</a></li>
+  <nav id="desktop-nav">
+    <div class="logo">Joshua Nick Tan</div>
+    <div>
+      <ul class="nav-links">
+        <li><a href="#about">ABOUT</a></li>
+        <li><a href="#projects">PROJECTS</a></li>
+        <li><a href="#experience">EXPERIENCE</a></li>
+        <li><a href="#extracurriculars">EXTRA-CURRICULARS</a></li>
+        <li><a href="#resume">RESUME</a></li>
       </ul>
     </div>
   </nav>
-
-  <section id="home">
-    <h1>Welcome to My Website</h1>
-    <!-- Add content for the home section -->
-  </section>
-
-  <section id="ABOUT ME">
-    <h2>ABOUT ME</h2>
-    <!-- Add content for the about section -->
-  </section>
-
-  <section id="PROJECTS">
-    <h2>PROJECTS</h2>
-    <!-- Add content for the services section -->
-  </section>
-
-  <section id="contact">
-    <h2>Contact Me</h2>
-    <!-- Add content for the contact section -->
-  </section>
-
-  <script src="script.js"></script>
+  <nav id="hamburger-nav">
+    <div class="logo">Joshua Nick Tan</div>
+    <div class="hamburger-menu">
+      <div class="hamburger-icon" onclick="toggleMenu()">
+      <span></span>
+      <span></span>
+      <span></span>
+      </div>
+      <div class="menu-links">
+        <li><a href="#about" onclick="toggleMenu()">ABOUT</a></li>
+        <li><a href="#projects" onclick="toggleMenu()">PROJECTS</a></li>
+        <li><a href="#experience" onclick="toggleMenu()">EXPERIENCE</a></li>
+        <li><a href="#extracurriculars" onclick="toggleMenu()">EXTRA-CURRICULARS</a></li>
+        <li><a href="#resume" onclick="toggleMenu()">RESUME</a></li>
+      </div>
+    </div>
+  </nav>
+  <script src="script.js"></script>  
 </body>
 </html>
