--- a/index.html
+++ b/index.html
@@ -8,36 +8,150 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="mediaqueries.css">
 </head>
-<body>
-  <nav id="desktop-nav">
-    <div class="logo">Joshua Nick Tan</div>
-    <div>
-      <ul class="nav-links">
-        <li><a href="#about">ABOUT</a></li>
-        <li><a href="#projects">PROJECTS</a></li>
-        <li><a href="#experience">EXPERIENCE</a></li>
-        <li><a href="#extracurriculars">EXTRA-CURRICULARS</a></li>
-        <li><a href="#resume">RESUME</a></li>
-      </ul>
-    </div>
-  </nav>
-  <nav id="hamburger-nav">
-    <div class="logo">Joshua Nick Tan</div>
-    <div class="hamburger-menu">
-      <div class="hamburger-icon" onclick="toggleMenu()">
-      <span></span>
-      <span></span>
-      <span></span>
+  <body>
+    <nav id="desktop-nav">
+      <div class="logo">Joshua Nick Tan</div>
+      <div>
+        <ul class="nav-links">
+          <li><a href="#about">ABOUT</a></li>
+          <li><a href="#projects">PROJECTS</a></li>
+          <li><a href="#experience">EXPERIENCE</a></li>
+          <li><a href="#extracurriculars">EXTRA-CURRICULARS</a></li>
+          <li><a href="#resume">RESUME</a></li>
+        </ul>
       </div>
-      <div class="menu-links">
-        <li><a href="#about" onclick="toggleMenu()">ABOUT</a></li>
-        <li><a href="#projects" onclick="toggleMenu()">PROJECTS</a></li>
-        <li><a href="#experience" onclick="toggleMenu()">EXPERIENCE</a></li>
-        <li><a href="#extracurriculars" onclick="toggleMenu()">EXTRA-CURRICULARS</a></li>
-        <li><a href="#resume" onclick="toggleMenu()">RESUME</a></li>
+    </nav>
+    <nav id="hamburger-nav">
+      <div class="logo">Joshua Nick Tan</div>
+      <div class="hamburger-menu">
+        <div class="hamburger-icon" onclick="toggleMenu()">
+        <span></span>
+        <span></span>
+        <span></span>
+        </div>
+        <div class="menu-links">
+          <li><a href="#about" onclick="toggleMenu()">ABOUT</a></li>
+          <li><a href="#projects" onclick="toggleMenu()">PROJECTS</a></li>
+          <li><a href="#experience" onclick="toggleMenu()">EXPERIENCE</a></li>
+          <li><a href="#extracurriculars" onclick="toggleMenu()">EXTRA-CURRICULARS</a></li>
+          <li><a href="#resume" onclick="toggleMenu()">RESUME</a></li>
+        </div>
       </div>
-    </div>
-  </nav>
-  <script src="script.js"></script>  
-</body>
+    </nav>
+
+    <section id="profile">
+      <div class="section__pic-container">
+        <img class="circular-image" src="./assets/profile-pic.jpg" alt="Joshua's Profile Picture" border-radius:50%>
+      </div>
+      <div class="section__text">
+        <p class="section__text__p1">Hello! I'm</p>
+        <h1 class="title">Joshua Nick Tan</h1>
+        <p class="section__text__p2">Robotics Engineer</p>
+        <p class="section__text__p1">SUTD EPD Senior, Class of 2025</p>
+        <div class="btn-container">
+          <button class="btn btn-color-2" 
+            onclick="window.open('./assets/resume-example.pdf')">
+            Open Resume 
+          </button>
+          <button class="btn btn-color-1" 
+            onclick="location.href='./#contact'">
+            Contact Info
+          </button>
+        </div>
+        <div id="socials-container">
+          <img src="./assets/linkedin.png" alt="linkedin.com/in/joshuanicktan" 
+          class="icon" onclick="location.href='https://linkedin.com/in/joshuanicktan'">
+          <img src="./assets/github.png" alt="github.com/joshuanicktan" 
+          class="icon" onclick="location.href='https://github.com/joshuanicktan'">
+        </div>
+      </div> 
+    </section>
+    
+    <section id="about">
+      <p class="section__text_p1">Get To Know More</p>
+      <h1 class="title">About Me</h1>
+      <div class="section-container">
+        <div class="section__pic-container">
+          <img src="./assets/about-pic.jpg" alt="Profile Pic" class="about-pic">
+        </div>
+        <div class="about-details-container">
+          <div class="about-containers">
+            <div class="details-container">
+              <img src="./assets/experience.png" alt="Experience Icon" class="icon">
+              <h3>Experience</h3>
+              <p>Student for 18 Years (:</p>
+            </div>
+            <div class="details-container">
+              <img src="./assets/education.png" alt="Education Icon" class="icon">
+              <h3>Education</h3>
+              <p>B.Eng SUTD</p>
+            </div>
+            <div class="details-container">
+              <img src="./assets/experience.png" alt="Experience Icon" class="icon">
+              <h3>Experience</h3>
+              <p>Student for 18 Years (:</p>
+            </div>
+          </div>
+          <p>hello hello i am desigineer?</p>
+        </div>
+      </div>
+      <img src="./assets/arrow.png" alt="Arrow Icon" class="icon arrow"
+      onclick="location.href='./#experience'">
+    </section>
+
+    <section id="experience">
+      <p class="section__text_p1">Explore My</p>
+      <h1 class="title">Experience</h1>
+      <div class="experience-details-container">
+        <div class="about-containers">
+          <div class="details-containers">
+          <h2 class="experience-sub-title">Mechanical Design</h2>
+            <div class="article-container">
+              <article>
+                <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                <div>
+                  <h3>Fusion360</h3>
+                  <p>Very Bagus</p>
+                </div>
+              </article>
+              <article>
+                <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                <div>
+                  <h3>SolidWorks</h3>
+                </div>
+              </article>
+              <article>
+                <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                <div>
+                  <h3>Bagus</h3>
+                </div>
+              </article>
+              <article>
+                <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                <div>
+                  <h3>Bagus</h3>
+                </div>
+              </article>
+              <article>
+                <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                <div>
+                  <h3>Bagus</h3>
+                </div>
+              </article>
+              <article>
+                <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                <div>
+                  <h3>Bagus</h3>
+                </div>
+              </article>
+            </div>
+          </div>
+        </div>
+      </div>
+      <img src="./assets/arrow.png" alt="Arrow Icon" class="icon arrow"
+      onclick="location.href='./#experience'">      
+    </section>
+
+    <script src="script.js"></script>  
+  </body>
 </html>
