feat: basic skeleton and projects page

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </section>
     
     <section id="about">
-      <p class="section__text_p1">Get To Know More</p>
+      <p class="section__text__p1">Get To Know More</p>
       <h1 class="title">About Me</h1>
       <div class="section-container">
         <div class="section__pic-container">
@@ -100,11 +100,11 @@
     </section>
 
     <section id="experience">
-      <p class="section__text_p1">Explore My</p>
+      <p class="section__text__p1">Explore My</p>
       <h1 class="title">Experience</h1>
       <div class="experience-details-container">
         <div class="about-containers">
-          <div class="details-containers">
+          <div class="details-container">
           <h2 class="experience-sub-title">Mechanical Design</h2>
             <div class="article-container">
               <article>
@@ -146,11 +146,208 @@
               </article>
             </div>
           </div>
+          <div class="details-container">
+            <h2 class="experience-sub-title">Hands On</h2>
+              <div class="article-container">
+                <article>
+                  <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                  <div>
+                    <h3>Soldering</h3>
+                    <p>Only burned myself once</p>
+                  </div>
+                </article>
+                <article>
+                  <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                  <div>
+                    <h3>Machining</h3>
+                    <p>Mill, Lathe, CNC and Manual</p>
+                  </div>
+                </article>
+                <article>
+                  <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                  <div>
+                    <h3>3D Printing</h3>
+                    <p>FDM, SLA, Hotglue Gun</p>
+                  </div>
+                </article>
+                <article>
+                  <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                  <div>
+                    <h3>Bagus</h3>
+                  </div>
+                </article>
+                <article>
+                  <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                  <div>
+                    <h3>Bagus</h3>
+                  </div>
+                </article>
+                <article>
+                  <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                  <div>
+                    <h3>Bagus</h3>
+                  </div>
+                </article>
+              </div>
+            </div>
         </div>
       </div>
       <img src="./assets/arrow.png" alt="Arrow Icon" class="icon arrow"
       onclick="location.href='./#experience'">      
     </section>
+
+    <section id="projects">
+      <p class="section__text__p1">Browse My Recent</p>
+      <h1 class="title">Projects</h1>
+      <div class="experience-details-container">
+        <div class="about-containers">
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/project-1.png"
+                alt="Project 1"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Click&Go Smart Bike Lock</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://youtu.be/FSrh78yaeLw'"
+              >
+                Poster
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                target="_blank"
+                onclick="window.open('https://youtu.be/FSrh78yaeLw')"
+              >
+                Product Video
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/project-1.png"
+                alt="Project 1"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Click&Go Smart Bike Lock</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://youtu.be/FSrh78yaeLw'"
+              >
+                Poster
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                target="_blank"
+                onclick="window.open('https://youtu.be/FSrh78yaeLw')"
+              >
+                Product Video
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/project-1.png"
+                alt="Project 1"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Click&Go Smart Bike Lock</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://youtu.be/FSrh78yaeLw'"
+              >
+                Poster
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                target="_blank"
+                onclick="window.open('https://youtu.be/FSrh78yaeLw')"
+              >
+                Product Video
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/project-1.png"
+                alt="Project 1"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Click&Go Smart Bike Lock</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://youtu.be/FSrh78yaeLw'"
+              >
+                Poster
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                target="_blank"
+                onclick="window.open('https://youtu.be/FSrh78yaeLw')"
+              >
+                Product Video
+              </button>
+            </div>
+          </div>
+
+        </div>
+      </div>
+      <img
+        src="./assets/arrow.png"
+        alt="Arrow icon"
+        class="icon arrow"
+        onclick="location.href='./#contact'"
+      />
+    </section>
+
+    <section id="contact">
+      <p class="section__text__p1">Get in Touch</p>
+      <h1 class="title">Contact Me</h1>
+      <div class="contact-info-upper-container">
+        <div class="contact-info-container">
+          <img
+            src="./assets/email.png"
+            alt="Email icon"
+            class="icon contact-icon email-icon"
+          />
+          <p><a href="mailto:joshuanicktan@gmail.com">joshuanicktan@gmail.com</a></p>
+        </div>
+        <div class="contact-info-container">
+          <img
+            src="./assets/linkedin.png"
+            alt="LinkedIn icon"
+            class="icon contact-icon"
+          />
+          <p><a href="https://www.linkedin.com/in/joshuanicktan">LinkedIn</a></p>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <nav>
+        <div class="nav-links-container">
+          <ul class="nav-links">
+            <li><a href="#about">About</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+      <p>joshuanicktan | 2024</p>
+    </footer>
 
     <script src="script.js"></script>  
   </body>
